Bug 128899 - CLoop buildfix after r164207
Summary: CLoop buildfix after r164207
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 128795
  Show dependency treegraph
 
Reported: 2014-02-17 04:28 PST by Dániel Bátyai
Modified: 2014-02-17 05:09 PST (History)
4 users (show)

See Also:


Attachments
Proposed fix (1.04 KB, patch)
2014-02-17 04:29 PST, Dániel Bátyai
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dániel Bátyai 2014-02-17 04:28:17 PST
In file included from /Volumes/Data/slave/mavericks-cloop-debug/build/Source/JavaScriptCore/llint/LLIntOffsetsExtractor.cpp:29:
In file included from /Volumes/Data/slave/mavericks-cloop-debug/build/Source/JavaScriptCore/bytecode/CodeBlock.h:45:
/Volumes/Data/slave/mavericks-cloop-debug/build/Source/JavaScriptCore/dfg/DFGCommon.h:293:51: error: unused parameter 'mode' [-Werror,-Wunused-parameter]
inline bool shouldShowDisassembly(CompilationMode mode = DFGMode)
                                                  ^
1 error generated.
Comment 1 Dániel Bátyai 2014-02-17 04:29:22 PST
Created attachment 224356 [details]
Proposed fix
Comment 2 Csaba Osztrogonác 2014-02-17 04:31:23 PST
Comment on attachment 224356 [details]
Proposed fix

LGTM, r=me
Comment 3 WebKit Commit Bot 2014-02-17 05:09:34 PST
Comment on attachment 224356 [details]
Proposed fix

Clearing flags on attachment: 224356

Committed r164216: <http://trac.webkit.org/changeset/164216>
Comment 4 WebKit Commit Bot 2014-02-17 05:09:42 PST
All reviewed patches have been landed.  Closing bug.