CLoop buildfix after r164207 https://bugs.webkit.org/show_bug.cgi?id=128899

Patch by Dániel Bátyai <dbatyai.u-szeged@partner.samsung.com> on 2014-02-17
Reviewed by Csaba Osztrogonác.

* dfg/DFGCommon.h:
(JSC::DFG::shouldShowDisassembly):

Canonical link: https://commits.webkit.org/146941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164216 268f45cc-cd09-0410-ab3c-d52691b4dbfc